@@ -1,3 +1,12 @@
+2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/maemo/main.py:
+	* python/mushin/maemo/things.py:
+	  Fixed some ui bugs.
+	* python/mushin/maemo/new.py (added):
+	* bin/mushin-maemo (added):
+	  Added a first widget for adding a new thing.
+
 2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/maemo (added):
